aster: css + js + ftlh

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Jost&amp;display=swap" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
+    <link href="../static/css/index.css" rel="stylesheet">
     <title>YANAO.SHARING</title>
 </head>
 <body>
 <div class="content">
     <header class="header">
         <span class="header-text">YANAO.SHARING</span>
-        <img class="logo-image" src="Profile.png">
+        <img class="logo-image" src="../static/img/Profile.png">
     </header>
 
     <div class="themes">
