--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -57,3 +57,13 @@
     background: #D9D9D9;
     height: 3px;
 }
+
+.final-button {
+    font-family: Jost, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+}
+
