--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -12,12 +12,12 @@
 }
 
 .main {
-    height: 95vh;
+    height: 80vh;
 }
 
 .filter {
     height: 80vh;
-    width: 20%;
+    width: 35vw;
 }
 
 .filter label {
@@ -29,7 +29,7 @@
     color: #000000;
 }
 
-.selector label{
+.selector label {
     font-family: Jost, sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -45,14 +45,16 @@
     background: #2B67F6;
 
     height: 3px;
-    border:none;
+    border: none;
 }
+
 .ui-slider .ui-slider-handle {
     background: #FFFFFF !important;
     border: 1px solid #2B67F6 !important;
     box-sizing: border-box;
     border-radius: 50px;
 }
+
 .ui-slider .ui-slider-range {
     background: #D9D9D9;
     height: 3px;
